Crash When Splitting and Merging Areas with Header Text Set #52263

Closed
opened 2017-08-04 22:16:07 +02:00 by Wayne Wu · 4 comments

System Information
Windows 10 Pro
Intel Xeon CPU E5-2680
NVIDIA GTX 1060 6GB

Blender Version
Broken: 2.78 (sub 0), branch: master, commit date: 2016-09-26 12:42, hash: 4bb1e22

Short description of error
Blender crashes when splitting and merging areas that have the header text set

Exact steps for others to reproduce the error

  1. Set the header text for any area, using header_text_set(). Call this A1.
  2. Split A1 to get A2. (Notice that A2 has the header text set as well from A1).
  3. Close A2 by merging from another area other than A1.
  4. Close A1 by merging from another area. (This should crash blender).

You can keep splitting the area, and Blender will crash on the second merge.

**System Information** Windows 10 Pro Intel Xeon CPU E5-2680 NVIDIA GTX 1060 6GB **Blender Version** Broken: 2.78 (sub 0), branch: master, commit date: 2016-09-26 12:42, hash: 4bb1e22 **Short description of error** Blender crashes when splitting and merging areas that have the header text set **Exact steps for others to reproduce the error** 1. Set the header text for any area, using header_text_set(). Call this A1. 2. Split A1 to get A2. (Notice that A2 has the header text set as well from A1). 3. Close A2 by merging from another area other than A1. 4. Close A1 by merging from another area. (This should crash blender). You can keep splitting the area, and Blender will crash on the second merge.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @wayne.wuuuu

Added subscriber: @wayne.wuuuu
Bastien Montagne self-assigned this 2017-08-08 13:01:33 +02:00

This issue was referenced by c8a8589d4f

This issue was referenced by c8a8589d4f1d38fa20d8fe5d4e006bb8d7770bbc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52263
No description provided.