Fix T52263: Crash When Splitting and Merging Areas with Header Text Set.

Not a regression, but safe enough to be included in 2.79.